<resources>
    <string name="app_name">Троицкий Алексей</string>

    <!-- Contacts page info -->
    <string name="header_rating">Рейтинг</string>
    <string name="header_code_strings">Написано строк кода</string>
    <string name="header_projects">Проектов</string>

    <string name="contacts_mobile">Мобильный</string>
    <string name="contacts_email">E-mail</string>
    <string name="contacts_vk">Профиль в VK</string>
    <string name="contacts_repo">Репозиторий</string>
    <string name="contacts_about">О себе</string>


    <!-- Temporary volumes of contacts page info -->
    <string name="header_rating_vol">5</string>
    <string name="header_code_strings_vol">5</string>
    <string name="header_projects_vol">5</string>

    <string name="contacts_mobile_vol">+7 (916) 322–66-66</string>
    <string name="contacts_email_vol">podliza127@gmail.com</string>
    <string name="contacts_vk_vol">vk.com/</string>
    <string name="contacts_repo_vol">github.com/Tigran20</string>
    <string name="contacts_about_vol">Lorem ipsum dolor sit amet, consectitur adipiscing elit.
        Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo
        lectus, ac blandit elit. Lorem ipsum dolor sit amet, consectitur adipiscing elit.
        Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo
        lectus, ac blandit elit. Lorem ipsum dolor sit amet, consectitur adipiscing elit.
        Nulla quam velit, vulputate. Lorem ipsum dolor sit amet, consectitur adipiscing elit.
        Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo
        lectus, ac blandit elit. Lorem ipsum dolor sit amet, consectitur adipiscing elit.
        Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo
        lectus, ac blandit elit. Lorem ipsum dolor sit amet, consectitur adipiscing elit.
        Nulla quam velit, vulputate.
    </string>

</resources>