<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activities.MainActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/spacing_medium_32"
                android:paddingTop="@dimen/spacing_medium_32">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/rating_txt"
                        style="@style/header_text.large"
                        android:text="@string/header_rating_vol"/>

                    <TextView
                        style="@style/header_text"
                        android:text="@string/header_rating"/>

                </LinearLayout>

                <View
                    android:layout_width="@dimen/line_size"
                    android:layout_height="match_parent"
                    android:background="@color/grey_light"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/code_strings_txt"
                        style="@style/header_text.large"
                        android:text="@string/header_code_strings_vol"/>

                    <TextView
                        style="@style/header_text"
                        android:text="@string/header_code_strings"/>

                </LinearLayout>

                <View
                    android:layout_width="@dimen/line_size"
                    android:layout_height="match_parent"
                    android:background="@color/grey_light"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/projects_txt"
                        style="@style/header_text.large"
                        android:text="@string/header_projects_vol"/>

                    <TextView
                        style="@style/header_text"
                        android:text="@string/header_projects"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small_8"
                android:layout_marginTop="@dimen/spacing_small_8"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_call_black_24dp"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_big_72"
                    android:layout_marginLeft="@dimen/spacing_medium_32"
                    android:layout_marginRight="@dimen/spacing_normal_16"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/phone_et"
                            style="@style/text_edit_element"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/contacts_mobile"
                            android:inputType="phone"
                            android:text="@string/contacts_mobile_vol"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_phone_in_talk_black_24dp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_size"
                android:layout_marginLeft="@dimen/spacing_larger_72"
                android:background="@color/grey_light">
            </View>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small_8"
                android:layout_marginTop="@dimen/spacing_small_8"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_email_black_24dp"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_big_72"
                    android:layout_marginLeft="@dimen/spacing_medium_32"
                    android:layout_marginRight="@dimen/spacing_normal_16"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/email_et"
                            style="@style/text_edit_element"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/contacts_email"
                            android:inputType="textEmailAddress"
                            android:text="@string/contacts_email_vol"/>

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_send_black_24dp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_size"
                android:layout_marginLeft="@dimen/spacing_larger_72"
                android:background="@color/grey_light">
            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small_8"
                android:layout_marginTop="@dimen/spacing_small_8"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_vk_24dp"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_big_72"
                    android:layout_marginLeft="@dimen/spacing_medium_32"
                    android:layout_marginRight="@dimen/spacing_normal_16"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/vk_et"
                            style="@style/text_edit_element"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/contacts_vk"
                            android:text="@string/contacts_vk_vol"

                            />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_visibility_black_24dp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_size"
                android:layout_marginLeft="@dimen/spacing_larger_72"
                android:background="@color/grey_light">
            </View>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small_8"
                android:layout_marginTop="@dimen/spacing_small_8"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_github_24dp"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_big_72"
                    android:layout_marginLeft="@dimen/spacing_medium_32"
                    android:layout_marginRight="@dimen/spacing_normal_16"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/git_et"
                            style="@style/text_edit_element"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/contacts_repo"
                            android:text="@string/contacts_repo_vol"/>

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_visibility_black_24dp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_size"
                android:layout_marginLeft="@dimen/spacing_larger_72"
                android:background="@color/grey_light">
            </View>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small_8"
                android:layout_marginTop="@dimen/spacing_small_8"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    style="@style/icon.left"
                    android:src="@drawable/ic_account_circle_black_24dp"/>

                <LinearLayout
                    style="@style/inner_line_layout_element"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/spacing_normal_16">

                        <EditText
                            android:id="@+id/about_et"
                            style="@style/text_edit_element"
                            android:hint="@string/contacts_about"
                            android:inputType="textMultiLine|textAutoCorrect|textCapSentences"
                            android:text="@string/contacts_about_vol"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</android.support.v4.widget.DrawerLayout>